--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</div>
 		<ul>
 		<li>
-			<a href="https://www.instagram.com/barackobama/"><i class="fabfa-instagram"></i> </a>
+			<a href="https://www.instagram.com/kahramandusun/"></i> </a>
 		</li></ul>
 	</div>
  </body>
