--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1> Hello my name is<strong> Özgür</strong></h1>
 		<img src="#"alt='Özgür'>  </div>
 		<div class="card">
-	<p> I like <strong>Movies, boxing, gaming</strong> and <strong>reading</strong></p></div>
+	<p> I like <strong>Movies, gaming</strong> and <strong>reading</strong></p></div>
 	<div class="card">
  		<p>I'm currently studying in <strong>Kedge BS</strong></p> </div>
 		<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> 
