--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="card-ozgur">
 		<h1> Hello my name is<strong> Özgür</strong></h1>
-		<img src="#"alt='Özgür'>  </div>
+		<img src="özgür-1.jpg"alt='Özgür'style=height:200px;length:200px>  </div>
 		<div class="card">
 	<p> I like <strong>Movies, gaming</strong> and <strong>reading</strong></p></div>
 	<div class="card">
