--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="card-ozgur">
 		<h1> Hello my name is<strong> Özgür</strong></h1>
-		<img src="özgür-1.jpg"alt='Özgür'style=height:200px;length:200px>  </div>
+		<img src="özgür-1.jpg"alt='Özgür'style=height:200px;length:200px;border-radius:50%>  </div>
 		<div class="card">
 	<p> I like <strong>Movies, gaming</strong> and <strong>reading</strong></p></div>
 	<div class="card">
@@ -18,8 +18,10 @@
 		<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> 
 	</div>
 		<ul>
-		<li>
-			<a href="https://www.instagram.com/kahramandusun/"></i> </a>
-		</li></ul>
+			<li>
+			<a href="https://www.instagram.com/barackobama/"><i class="fab fa-instagram"></i> 
+			</a></li>
+		</ul>
+		
 	</div>
  </body>
