--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<h1> Hello my name is<strong> Özgür</strong></h1>
 		<img src="özgür-1.jpg"alt='Özgür'style=height:200px;length:200px;border-radius:50%>  </div>
 		<div class="card">
-	<p> I like <strong>Movies, gaming</strong> and <strong>reading</strong></p></div>
+	<p> I like <strong>movies, gaming</strong> and <strong>reading</strong></p></div>
 	<div class="card">
  		<p>I'm currently studying in <strong>Kedge BS</strong></p> </div>
 		<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> 
 	</div>
 		<ul>
 			<li>
-			<a href="https://www.instagram.com/barackobama/"><i class="fab fa-instagram"></i> 
+			<a href="https://www.instagram.com/kahramandusun/"><i class="fab fa-instagram"></i> 
 			</a></li>
 		</ul>
 		
