--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="card-ozgur">
-		<h1> Hello my name is<strong> Özgür</strong></h1>
-		<img src="özgür-1.jpg"alt='Özgür'style=height:200px;length:200px;border-radius:50%>  </div>
-		<div class="card">
-	<p> I like <strong>movies, gaming</strong> and <strong>reading</strong></p></div>
-	<div class="card">
- 		<p>I'm currently studying in <strong>Kedge BS</strong></p> </div>
-		<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> 
+	<div> class="container">
+		<div class="card-ozgur">
+			<h1> Hello my name is<strong> Özgür</strong></h1>
+				<img src="özgür-1.jpg"alt='Özgür'style=height:200px;length:200px;border-radius:50%>  </div>
+			<div class="card">
+				<p> I like <strong>movies, gaming</strong> and <strong>reading</strong></p></div>
+			<div class="card">
+ 				<p>I'm currently studying in <strong>Kedge BS</strong></p> </div>
+			<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> 
+		</div>
 	</div>
 		<ul>
 			<li>
