--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div> class="container">
+	<div class="container">
 		<div class="card-ozgur">
 			<h1> Hello my name is<strong> Özgür</strong></h1>
 				<img src="özgür-1.jpg"alt='Özgür'style=height:200px;length:200px;border-radius:50%>  </div>
