--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> 
 		</div>
 	</div>
+	<div>
 		<ul>
 			<li>
 			<a href="https://www.instagram.com/kahramandusun/"><i class="fab fa-instagram"></i> 
