--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
 				<p> I like <strong>movies, gaming</strong> and <strong>reading</strong></p></div>
 			<div class="card">
  				<p>I'm currently studying in <strong>Kedge BS</strong></p> </div>
-			<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> 
-		</div>
-	</div>
-	<div>
-		<ul>
-			<li>
-			<a href="https://www.instagram.com/kahramandusun/"><i class="fab fa-instagram"></i> 
-			</a></li>
-		</ul>
-		
+			<div class="card"> <p >I am passionate about <strong>chess </strong>and <strong>sightseeing</strong></p> </div>
+	
+			<ul>
+				<li>
+					<a href="https://www.instagram.com/kahramandusun/"><i class="fab fa-instagram"></i> </a></li>
+			</ul>
 	</div>
  </body>
